# bigquery-subscription

./: Dockerfile  README.md  compose.yaml  pyproject.toml
src/bigquery_subscription/: __main__.py
